--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "bulk-url-http-status-code",
   "private": true,
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/BULK-URL-HTTP-STATUS-CODE",
+  "homepage": "https://alenchernick.github.io/BULK-URL-HTTP-STATUS-CODE",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run vite build",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "npx vite build",
+    "deploy": "npx gh-pages -d dist"
   },
   "dependencies": {
     "file-saver": "^2.0.5",
